After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703562 - Missing few allow-none annotation
Missing few allow-none annotation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-03 17:06 UTC by Nicolas Dufresne (ndufresne)
Modified: 2013-07-03 18:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add few missing allow-none annotation (17.59 KB, patch)
2013-07-03 17:06 UTC, Nicolas Dufresne (ndufresne)
accepted-commit_now Details | Review

Description Nicolas Dufresne (ndufresne) 2013-07-03 17:06:44 UTC
Created attachment 248336 [details] [review]
Add few missing allow-none annotation

I've hit a missing allow-none annotation in the Allocator and started greping over and found more. Shall this be merged in 1.0 stable too ?
Comment 1 Tim-Philipp Müller 2013-07-03 17:18:11 UTC
Comment on attachment 248336 [details] [review]
Add few missing allow-none annotation

Go for it (both master + 1.0).
Comment 2 Nicolas Dufresne (ndufresne) 2013-07-03 18:34:57 UTC
commit 4656d18fd5c180f3788562db775cc09cbe63cd64
Author: Nicolas Dufresne <nicolas.dufresne@collabora.co.uk>
Date:   Wed Jul 3 13:03:49 2013 -0400

    Add few missing allow-none annotation

commit 2616feed42333df5354e9e8b830a28d9acdbcad6
Author: Nicolas Dufresne <nicolas.dufresne@collabora.co.uk>
Date:   Wed Jul 3 13:03:49 2013 -0400

    Add few missing allow-none annotation
    
    https://bugzilla.gnome.org/show_bug.cgi?id=703562
    
    Conflicts:
        gst/gstmessage.c