Add few missing allow-none annotation

https://bugzilla.gnome.org/show_bug.cgi?id=703562

Conflicts:
	gst/gstmessage.c